Created container for course tools and began adding list items.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
      </ul>
    </div>
  </div>
+ <div class="Course-Tools" id ="tools">
+    <h2>Course Tools for Software Design and Development-3601</h2>
+    <ul>
+      <li class="Course-Tools" id = "version">Version-Control Tools </li>
+        <ul>
+          <li><span class="version-control"><a href="https://git-scm.com/">git</a></span></li>
+          <li><span class="version-control"><a href="https://github.com/">GitHub</a></span></li>
+          <li><span class="version-control"><a href="https://git-scm.com/">GitKraken</a></span></li>
+        </ul>
+      <li class="Course-Tools" id = "ide">Ide</li>
+      <li class="Course-Tools" id = "testing">Testing</li>
+    </ul>
+  </div>
+  /*<li><a href="http://jigsaw.w3.org/css-validator/">Check the CSS</a></li>*/
  <div class="faculty-container">
    <div class="section" id="faculty">
      <h2>Faculty</h2>
