--- a/index.html
+++ b/index.html
@@ -94,15 +94,23 @@
     <ul>
       <li class="Course-Tools" id = "version">Version-Control Tools </li>
         <ul>
-          <li><span class="version-control"><a href="https://git-scm.com/">git</a></span></li>
-          <li><span class="version-control"><a href="https://github.com/">GitHub</a></span></li>
-          <li><span class="version-control"><a href="https://git-scm.com/">GitKraken</a></span></li>
+          <li><span class="local"><a href="https://git-scm.com/">git</a></span></li>
+          <li><span class="cloud"><a href="https://github.com/">GitHub</a></span></li>
+          <li><span class="local"><a href="https://git-scm.com/">GitKraken</a></span></li>
         </ul>
       <li class="Course-Tools" id = "ide">Ide</li>
+        <ul>
+          <li><span class="local"><a href="https://code.visualstudio.com/">Visual Studio Code</a></span></li>
+        </ul>
       <li class="Course-Tools" id = "testing">Testing</li>
+        <ul>
+          <li><span class="local"><a href="https://junit.org/junit5/">JUnit</a></span></li>
+          <li><span class="local"><a href="https://karma-runner.github.io/latest/index.html">Karma</a></span></li>
+          <li><span class="local"><a href="https://www.protractortest.org/#/">Protractor</a></span></li>
+          <li><span class="cloud"><a href="https://github.com/features/actions">GitHub Actions</a></span></li>
+        </ul>
     </ul>
   </div>
-  /*<li><a href="http://jigsaw.w3.org/css-validator/">Check the CSS</a></li>*/
  <div class="faculty-container">
    <div class="section" id="faculty">
      <h2>Faculty</h2>
