Changed container class for new HTML content. Completed CSS styling.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
      </ul>
    </div>
  </div>
- <div class="Course-Tools" id ="tools">
+ <div class="Course-Tools-Title" id ="tools">
     <h2>Course Tools for Software Design and Development-3601</h2>
     <ul>
       <li class="Course-Tools" id = "version">Version-Control Tools </li>
