--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <body>
  <h1 id="main-title">UMM Computer Science</h1>
  <div class="pslo-courses-container">
-   <div class="section" id="pslo">
+   <div class="sectionA" id="pslo">
      <h2>Program Student Learning Outcomes for UMM Computer Science</h2>
      <ol>
        <li class="pslo">Students will be able to apply fundamental principles of computer science to solve problems in
@@ -47,7 +47,7 @@
        <li class="pslo">Students will be able to identify and analyze ethical implications involving technology.</li>
      </ol>
    </div>
-   <div class="section" id="courses">
+   <div class="sectionA" id="courses">
      <h2>Required Courses</h2>
      <ul>
        <li class="major-element level-1xxx" id="introductory-sequence">An introductory course sequence
@@ -89,7 +89,7 @@
      </ul>
    </div>
  </div>
- <div class="Course-Tools-Title" id ="tools">
+ <div class="sectionB" id ="tools">
     <h2>Course Tools for Software Design and Development-3601</h2>
     <ul>
       <li class="Course-Tools" id = "version">Version-Control Tools </li>
@@ -112,7 +112,7 @@
     </ul>
   </div>
  <div class="faculty-container">
-   <div class="section" id="faculty">
+   <div class="sectionA" id="faculty">
      <h2>Faculty</h2>
      <ul id="faculty-list">
        <li id="Elena">
