--- a/index.html
+++ b/index.html
@@ -139,24 +139,26 @@
      </ul>
    </div>
 
-   <div class="card" id="validation">
-     <div class="card-body">
-       <h6 class="card-title">Validation</h6>
-       <p class="card-text">
-         In general you wouldn't want to put links like these
-         (or <a href="https://stackoverflow.com/questions/36383923/how-to-get-the-badge-when-validating-html-in-the-w3c-validator">
-         validation badges</a>) on real project web pages. We've included them because it makes it easier for us to
-         quickly check your HTML.
-       </p>
-       <ul class="card-text">
-         <li><a href="https://validator.w3.org">Check the HTML</a></li>
-         <li><a href="http://jigsaw.w3.org/css-validator/">Check the CSS</a></li>
-       </ul>
-       <p class="card-text">
-         Thanks for writing clean HTML and CSS!
-       </p>
-     </div>
+
    </div>
+
+   <div class="card" id="validation">
+    <div class="card-body">
+      <h6 class="card-title">Validation</h6>
+      <p class="card-text">
+        In general you wouldn't want to put links like these
+        (or <a href="https://stackoverflow.com/questions/36383923/how-to-get-the-badge-when-validating-html-in-the-w3c-validator">
+        validation badges</a>) on real project web pages. We've included them because it makes it easier for us to
+        quickly check your HTML.
+      </p>
+      <ul class="card-text">
+        <li><a href="https://validator.w3.org">Check the HTML</a></li>
+        <li><a href="http://jigsaw.w3.org/css-validator/">Check the CSS</a></li>
+      </ul>
+      <p class="card-text">
+        Thanks for writing clean HTML and CSS!
+      </p>
+    </div>
 
    <!-- html and javascript code for switching style on the fly comes from:
    https://stackoverflow.com/questions/19844545/replacing-css-file-on-the-fly-and-apply-the-new-style-to-the-page -->
@@ -167,6 +169,8 @@
      </ul>
    </div>
  </div>
- <div class="bg"></div>
+ <div class="bg">
+  <img class="pic" src="./assets/images/Dungeon.jpg"  alt="Nic" />
+ </div>
  </body>
 </html>
