--- a/index.html
+++ b/index.html
@@ -92,23 +92,26 @@
  <div class="sectionB" id ="tools">
     <h2>Course Tools for Software Design and Development-3601</h2>
     <ol>
-      <li class="Course-Tools" id = "version">Version-Control Tools </li>
+      <li class="Course-Tools" id = "version">Version-Control Tools
         <ol>
           <li><span class="local"><a href="https://git-scm.com/">git</a></span></li>
           <li><span class="cloud"><a href="https://github.com/">GitHub</a></span></li>
           <li><span class="local"><a href="https://git-scm.com/">GitKraken</a></span></li>
         </ol>
-      <li class="Course-Tools" id = "ide">Ide</li>
+      </li>
+      <li class="Course-Tools" id = "ide">Ide
         <ol>
           <li><span class="local"><a href="https://code.visualstudio.com/">Visual Studio Code</a></span></li>
         </ol>
-      <li class="Course-Tools" id = "testing">Testing</li>
+      </li>
+      <li class="Course-Tools" id = "testing">Testing
         <ol>
           <li><span class="local"><a href="https://junit.org/junit5/">JUnit</a></span></li>
           <li><span class="local"><a href="https://karma-runner.github.io/latest/index.html">Karma</a></span></li>
           <li><span class="local"><a href="https://www.protractortest.org/#/">Protractor</a></span></li>
           <li><span class="cloud"><a href="https://github.com/features/actions">GitHub Actions</a></span></li>
         </ol>
+      </li>
       </ol>
   </div>
  <div class="faculty-container">
