Cleaned up the CSS code overall structure (positioned . and # blocks next to eachother for readability). Added a background image and filled the screen. Changed fonts of container text. Added links in HTML to faculty webpages. Customized container borders. Added on-click effect for style buttons.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
  <body>
  <h1 id="main-title">UMM Computer Science</h1>
- <div class="pslo-courses-container">
-   <div class="sectionA" id="pslo">
+   <div class="pslo-container" id="pslo">
      <h2>Program Student Learning Outcomes for UMM Computer Science</h2>
      <ol>
        <li class="pslo">Students will be able to apply fundamental principles of computer science to solve problems in
@@ -47,7 +46,7 @@
        <li class="pslo">Students will be able to identify and analyze ethical implications involving technology.</li>
      </ol>
    </div>
-   <div class="sectionA" id="courses">
+   <div class="courses-container" id="courses">
      <h2>Required Courses</h2>
      <ul>
        <li class="major-element level-1xxx" id="introductory-sequence">An introductory course sequence
@@ -89,7 +88,7 @@
      </ul>
    </div>
  </div>
- <div class="sectionB" id ="tools">
+ <div class="tools-container" id ="tools">
     <h2>Course Tools for Software Design and Development-3601</h2>
     <ol>
       <li class="Course-Tools" id = "version">Version-Control Tools
@@ -113,38 +112,35 @@
         </ol>
       </li>
       </ol>
-  </div>
- <div class="faculty-container">
-   <div class="sectionA" id="faculty">
+ </div>
+ <div class="faculty-container" id="faculty">
+   <div id="faculty">
      <h2>Faculty</h2>
      <ul id="faculty-list">
        <li id="Elena">
-         <div class="name">Elena</div>
+         <div class="name"><a href="https://academics.morris.umn.edu/elena-machkasova">Elena</a></div>
          <div class="office">Science 2325</div>
          <img class="pic" src="./assets/images/Elena.jpg" alt="Elena"/>
        </li>
        <li id="KK">
-         <div class="name">KK</div>
+         <div class="name"><a href="https://academics.morris.umn.edu/kristin-lamberty">KK</a></div>
          <div class="office">Science 2525</div>
          <img class="pic" src="./assets/images/KK.jpg"  alt="KK" />
        </li>
        <li id="Nic">
-         <div class="name">Nic</div>
+         <div class="name"><a href="https://academics.morris.umn.edu/nic-mcphee">Nic</a></div>
          <div class="office">Science 1315</div>
          <img class="pic" src="./assets/images/Nic.jpg"  alt="Nic" />
        </li>
        <li id="Peter">
-         <div class="name">Peter</div>
+         <div class="name"><a href="https://academics.morris.umn.edu/peter-dolan  ">Peter</a></div>
          <div class="office">Science 1440</div>
          <img class="pic" src="./assets/images/Peter.jpg"  alt="Peter" />
        </li>
      </ul>
    </div>
-
-
-   </div>
-
-   <div class="card" id="validation">
+ </div>
+ <div class="validation-container" id="validation">
     <div class="card-body">
       <h6 class="card-title">Validation</h6>
       <p class="card-text">
