Added comment denoting addition of faculty webpage links.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
    <div id="faculty">
      <h2>Faculty</h2>
      <ul id="faculty-list">
+       <!--Added webpage links for faculty.-->
        <li id="Elena">
          <div class="name"><a href="https://academics.morris.umn.edu/elena-machkasova">Elena</a></div>
          <div class="office">Science 2325</div>
