Fixed duplicate id in CSS style.2. Removed trailing </div> tag from HTML.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
        </li>
      </ul>
    </div>
- </div>
  <div class="tools-container" id ="tools">
     <h2>Course Tools for Software Design and Development-3601</h2>
     <ol>
@@ -113,7 +112,7 @@
       </li>
       </ol>
  </div>
- <div class="faculty-container" id="faculty">
+ <div class="faculty-container" id="faculty2">
    <div id="faculty">
      <h2>Faculty</h2>
      <ul id="faculty-list">
